# dojang

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  deployment.md  development.md  domains.md  mcp-tools.md  service-ideation.md
src/backend/: config.py  database.py  main.py  models.py  seed.py  tools.py
src/backend/mcp_server/: server.py
src/backend/routers/: chat.py  clusters.py  community.py  curriculum.py  domains.py  exercises.py  knowledge.py  knowledge_graph.py  sketches.py  terminal.py  topics.py
src/backend/services/: chat_engine.py  coding_agent.py  container.py
src/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
src/frontend/src/: App.tsx  index.css
src/frontend/src/api/: client.ts
src/frontend/src/components/: ChatDrawer.tsx  ChatPanel.tsx  CodeEditor.tsx  CurriculumSidebar.tsx  ExercisePanel.tsx  HelpBanner.tsx  IconNav.tsx  KnowledgeList.tsx  KnowledgePanel.tsx  Markdown.tsx  ResultPanel.tsx  RightPanel.tsx  SelectionPopup.tsx  SidePanel.tsx  Sidebar.tsx  TerminalPanel.tsx  TerminalWidget.tsx  ThemeToggle.tsx
src/frontend/src/pages/: Community.tsx  Explore.tsx  Guide.tsx  Home.tsx  Learn.tsx  Practice.tsx  Sketch.tsx  Subjects.tsx
src/frontend/src/stores/: bypass.ts  community.ts  sketches.ts  store.ts  theme.ts
src/frontend/src/types/: index.ts
